Update README.md to fix formatting issues